Impl for oneibmcloud/devops-insights-platform#193
