# controllers/store.py
@@ -3,19 +3,7 @@ import abc
 
 class Store(abc.ABC):
     @abc.abstractmethod
-    def create_project(self, subject_account_id, account_id, project_id, body):
-        pass
-
-    @abc.abstractmethod
-    def get_project(self, subject_account_id, account_id, project_id):
-        pass
-
-    @abc.abstractmethod
     def list_projects(self, subject_account_id, account_id, filter_, page_size, page_token):
-        pass
-
-    @abc.abstractmethod
-    def delete_project(self, subject_account_id, account_id, project_id):
         pass
 
     @abc.abstractmethod
